--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="button_capture">Camera</string>
     <string name="title_activity_main">MainActivity</string>
-
+	<string name="send_byte"> Server Connect </string>
 </resources>
